--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  contacts_service: ^0.3.0
+  permission_handler: ^3.2.2
 
 dev_dependencies:
   flutter_test:
