Fixed issue where contacts_service-Swift.h is not found

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ def parse_KV_file(file, separator='=')
 end
 
 target 'Runner' do
+
+
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.
   system('rm -rf .symlinks')
@@ -67,9 +69,9 @@ end
 install! 'cocoapods', :disable_input_output_paths => true
 
 post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '4.0'
+        end
     end
-  end
 end
