--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ project 'Runner', {
   'Release' => :release,
 }
 
+pod 'Firebase/Auth'
+
 def parse_KV_file(file, separator='=')
   file_abs_path = File.expand_path(file)
   if !File.exists? file_abs_path
@@ -36,7 +38,7 @@ def parse_KV_file(file, separator='=')
 end
 
 target 'Runner' do
-
+  use_frameworks!
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.
@@ -69,9 +71,9 @@ end
 install! 'cocoapods', :disable_input_output_paths => true
 
 post_install do |installer|
-    installer.pods_project.targets.each do |target|
-        target.build_configurations.each do |config|
-            config.build_settings['SWIFT_VERSION'] = '4.0'
-        end
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
+  end
 end
