--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   contacts_service: ^0.3.0
   permission_handler: ^3.2.2
+  shared_preferences: ^0.5.3+4
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
