--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/ic_plus_accent_background.png
+    - assets/images/ic_inbox_gray.png
+    - assets/images/ic_account_gray.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
