--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,9 @@ flutter:
   fonts:
     - family: Arial
       fonts:
+        - asset: assets/fonts/Arial.ttf
         - asset: assets/fonts/Arial-Bold.ttf
+        - asset: assets/fonts/Arial Italic.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
