Added orange inbox icon, added mock user pics in chat screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
     - assets/images/ic_plus_accent_background.png
     - assets/images/ic_inbox_gray.png
     - assets/images/ic_account_gray.png
+    - assets/images/ic_inbox_orange.png
 
   fonts:
     - family: Arial
