--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_typeahead: ^1.6.1
   dots_indicator: ^1.0.0
   percent_indicator: ^2.1.1+1
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
