--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/ic_hourglass_gray_bg.png
     - assets/images/ic_tag_gray_bg.png
     - assets/images/ic_sync_gray.png
+    - assets/images/ic_edit_accent_bg.png
 
   fonts:
     - family: Arial
