--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dots_indicator: ^1.0.0
   percent_indicator: ^2.1.1+1
   modal_progress_hud: ^0.1.3
+  loadmore: ^1.0.4
 
 dev_dependencies:
   flutter_test:
