--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   percent_indicator: ^2.1.1+1
   modal_progress_hud: ^0.1.3
   loadmore: ^1.0.4
+  image_picker: ^0.6.1+4
+  firebase_storage: ^3.0.6
 
 dev_dependencies:
   flutter_test:
