--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   loadmore: ^1.0.4
   image_picker: ^0.6.1+4
   firebase_storage: ^3.0.6
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
