--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   image_picker: ^0.6.1+4
   firebase_storage: ^3.0.6
   intl: ^0.15.8
+  firebase_messaging: ^5.1.6
+  firebase_core: ^0.4.0
+  cloud_firestore: ^0.12.5
+
 
 dev_dependencies:
   flutter_test:
