--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/images/ic_edit_accent_bg.png
     - assets/images/ic_share_gray_bg.png
     - assets/images/ic_inbox_orange.png
+    - assets/images/ic_replies_gray.png
 
   fonts:
     - family: Arial
