--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,7 @@ project 'Runner', {
 }
 
 pod 'Firebase/Auth'
+pod 'Firebase'
 
 def parse_KV_file(file, separator='=')
   file_abs_path = File.expand_path(file)
