--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^5.1.6
   firebase_core: ^0.4.0
   cloud_firestore: ^0.12.5
+  flutter_local_notifications:
 
 
 dev_dependencies:
