Sent message to user with recommended contact after create_recommend API is successfully done. Rebuilt the UI for recommended user on card details screen. Implemented get card by id endpoint. Refreshed the card details screen after a recommend is done. Added loading progress when fetching card data on card details screen. Refreshed cards list when home screen is resumed.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/ic_share_gray_bg.png
     - assets/images/ic_inbox_orange.png
     - assets/images/ic_replies_gray.png
+    - assets/images/ic_inbox_circle_accent.png
 
   fonts:
     - family: Arial
