--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   loadmore: ^1.0.4
   image_picker: ^0.6.1+4
   firebase_storage: ^3.0.6
-  intl: ^0.16.0
+  intl: ^0.15.8
   firebase_messaging: ^5.1.6
   firebase_core: ^0.4.0
   cloud_firestore: ^0.12.5
@@ -70,6 +70,7 @@ flutter:
     - assets/images/ic_access_time.png
     - assets/images/ic_share_accent_bg.png
     - assets/images/ic_contact_accent_bg.png
+    - assets/images/ic_contact_gray_bg.png
     - assets/images/ic_message_accent_bg.png
     - assets/images/ic_contacts_gray_bg.png
     - assets/images/ic_hourglass_gray_bg.png
@@ -80,6 +81,7 @@ flutter:
     - assets/images/ic_inbox_orange.png
     - assets/images/ic_replies_gray.png
     - assets/images/ic_inbox_circle_accent.png
+
 
   fonts:
     - family: Arial
