--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <application
         android:name = "io.flutter.app.FlutterApplication"
         android:icon = "@mipmap/ic_launcher"
+        android:allowBackup="false"
         android:label = "contractor_search">
         <activity
             android:name = ".MainActivity"
