--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^0.12.5
   auto_size_text: ^2.1.0
   flutter_local_notifications:
+  fluttertoast: ^3.1.3
 
 
 dev_dependencies:
