--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   image_picker: ^0.6.1+4
   firebase_storage: ^3.0.6
-  intl: ^0.16.0
+  intl: ^0.15.8
   firebase_messaging: ^5.1.6
   firebase_core: ^0.4.0
   cloud_firestore: ^0.12.5
@@ -81,6 +81,8 @@ flutter:
     - assets/images/ic_inbox_orange.png
     - assets/images/ic_replies_gray.png
     - assets/images/ic_inbox_circle_accent.png
+    - assets/images/ic_bell_orange_accent.png
+    - assets/images/ic_bell_gray.png
 
 
   fonts:
