--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   auto_size_text: ^2.1.0
   flutter_local_notifications:
   fluttertoast: ^3.1.3
+  flutter_widgets: ^0.1.6
 
 
 dev_dependencies:
