--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,7 @@ flutter:
     - family: Arial
       fonts:
         - asset: assets/fonts/Arial.ttf
-        - asset: assets/fonts/Arial-Bold.ttf
+        - asset: assets/fonts/Arial Bold.ttf
         - asset: assets/fonts/Arial Italic.ttf
     - family: GothamRounded
       fonts:
