--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_local_notifications:
   fluttertoast: ^3.1.3
   flutter_widgets: ^0.1.6
+  phone_number: ^0.3.1
+  country_pickers: ^1.1.0
 
 
 dev_dependencies:
