--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_widgets: ^0.1.6
   phone_number: ^0.3.1
   country_pickers: ^1.1.0
+  rxdart: ^0.22.0
 
 dev_dependencies:
   flutter_test:
