--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:name = "io.flutter.app.FlutterApplication"
         android:icon = "@mipmap/ic_launcher"
         android:allowBackup="false"
-        android:label = "contractor_search">
+        android:label = "Recommend Friend">
         <activity
             android:name = ".MainActivity"
             android:configChanges = "orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
