--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/logo.png"
+  image_path: "assets/icons/ic_logo.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -92,6 +92,7 @@ flutter:
     - assets/images/ic_inbox_circle_accent.png
     - assets/images/ic_bell_orange_accent.png
     - assets/images/ic_bell_gray.png
+    - assets/images/ic_logo.png
 
 
   fonts:
