--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,8 +36,8 @@ android {
         applicationId "truly.elementary.recommend_friend"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 2
+        versionName '1.0.1'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
